html and css change

--- a/WebApp/WebApp/Views/Department/Index.cshtml
+++ b/WebApp/WebApp/Views/Department/Index.cshtml
@@ -7,9 +7,8 @@
 @{
     var Departments = Model;
     <div class="departments">
-        <table id="departmentTable" class="table table-bordered table-hover" style=" border:1px solid black;">
+        <table id="departmentTable" class="table table-bordered table-hover">
             <thead>
-                <tr><td style="background-color:gray;color:white;font-weight:bold;">Departments</td></tr>
                 <tr>
                     <td style="background-color:rgba(134, 133, 133,0.3)">Department Name</td>
                     <td style="background-color:rgba(134, 133, 133,0.3)">Department Group Name</td>
