--- a/WebApp/WebApp/Views/_Layout.cshtml
+++ b/WebApp/WebApp/Views/_Layout.cshtml
@@ -16,7 +16,9 @@
 <body>
     <nav>
         <div class="logo">
-            <img width="40" src="https://cdn2.iconfinder.com/data/icons/color-svg-vector-icons-2/512/users_group_people_friends-512.png" />
+            <a asp-action="index" asp-controller="home">
+                <img width="40" src="https://cdn2.iconfinder.com/data/icons/color-svg-vector-icons-2/512/users_group_people_friends-512.png" />
+            </a>
         </div>
         <ul id="nav-links" class="nav-links">
             <li><a asp-action="" asp-controller="">Home</a></li>
