--- a/WebApp/WebApp/Views/Department/Index.cshtml
+++ b/WebApp/WebApp/Views/Department/Index.cshtml
@@ -18,29 +18,46 @@
             <tbody>
                 @foreach (var dept in Departments)
                 {
-                    <tr>
+                    <tr id="@dept.Id">
                         <td>@dept.Name</td>
                         <td>@dept.GroupName</td>
                         <td class="table-action">
                             <a asp-action="details" asp-controller="department" asp-route-id="@dept.Id">Details</a>
                             <a class="edit" asp-action="" asp-controller="">Edit</a>
-                            <a asp-action="" asp-controller="">Delete</a>
+                            <a class="delete" href="#" onclick="deleteDepartment(@dept.Id)">Delete</a>
                         </td>
                     </tr>
-
                 }
-
             </tbody>
         </table>
     </div>
 }
 
 @section scripts
-{  
+{
+   
     <script>
+        function deleteDepartment(departmentID){  
+                 bootbox.confirm({
+                     message: "Are you sure you want to delete this department?",
+                     size: "xl",
+                     callback: function (result) {
+                         if (result) {
+                             $.ajax({
+                                 url: "/api/departments/" + departmentID,
+                                 method: "DELETE",
+                                 success: function () {
+                                     location.href = "/department";
+                                 }
+                             });
+                         }
+                     }
+                 });   
+        }
         $(document).ready(function () {
             $("#departmentTable").DataTable();
         });
+  
     </script>
 }
 
