--- a/WebApp/WebApp/Views/_Layout.cshtml
+++ b/WebApp/WebApp/Views/_Layout.cshtml
@@ -60,6 +60,7 @@
             $(this).toggleClass("toggle .line2");
             $(this).toggleClass("toggle .line3");
             $(".nav-links").toggleClass("nav-active");
+            $(".toggle-button").toggleClass("change-color");
         });
     });
 </script>
