--- a/WebApp/WebApp/Views/Department/Index.cshtml
+++ b/WebApp/WebApp/Views/Department/Index.cshtml
@@ -5,8 +5,10 @@
 }
 
 @{
+    
     var Departments = Model;
     <div class="departments">
+        <button class="btn" style="margin-bottom:2%;" onclick="window.location.href='/department/new'">Add new department</button>
         <table id="departmentTable" class="table table-bordered table-hover">
             <thead>
                 <tr>
