--- a/WebApp/WebApp/Views/Department/Edit.cshtml
+++ b/WebApp/WebApp/Views/Department/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WebApp.Models.Department
 @{
-    ViewData["Title"] = "New";
+    ViewData["Title"] = "Edit";
     Layout = "~/Views/_Layout.cshtml";
 }
 
@@ -15,17 +15,19 @@
             <form asp-action="save" asp-controller="department" method="post" style="padding:30px 0; width:40vh;">
                 <div class="form-group">
                     <label asp-for="@Model.Name">Department name</label>
-                    <input asp-for="@Model.Name" type="text" value="" class="form-control"/>
+                    <input asp-for="@Model.Name" type="text" value="@Model.Name" class="form-control" />
                     <span asp-validation-for="@Model.Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="@Model.GroupName">Department group</label>
-                    <input asp-for="@Model.GroupName" type="text"  value="" class="form-control"/>
+                    <input asp-for="@Model.GroupName" type="text" value="@Model.GroupName" class="form-control" />
                     <span asp-validation-for="@Model.GroupName" class="text-danger"></span>
                 </div>
+
+                <input asp-for="@Model.Id" type="hidden" value="@Model.Id" />
+
                 <button class="btn" style="width:100%;">SAVE</button>
 
-                <input asp-for="@Model.Id" type="hidden" name="name" value="@Model.Id" />
             </form>
 
         </div>
