--- a/WebApp/WebApp/Views/Department/Index.cshtml
+++ b/WebApp/WebApp/Views/Department/Index.cshtml
@@ -25,7 +25,7 @@
                         <td>@dept.GroupName</td>
                         <td class="table-action">
                             <a asp-action="details" asp-controller="department" asp-route-id="@dept.Id">Details</a>
-                            <a class="edit" asp-action="" asp-controller="">Edit</a>
+                            <a class="edit" asp-action="edit" asp-controller="department" asp-route-id="@dept.Id">Edit</a>
                             <a class="delete" href="#" onclick="deleteDepartment(@dept.Id)">Delete</a>
                         </td>
                     </tr>
