Implemented employee index, and details view,

--- a/WebApp/WebApp/Views/Department/Index.cshtml
+++ b/WebApp/WebApp/Views/Department/Index.cshtml
@@ -7,7 +7,7 @@
 @{
     
     var Departments = Model;
-    <div class="departments">
+    <div class="webApp-table">
         <button class="btn" style="margin-bottom:2%;" onclick="window.location.href='/department/new'">Add new department</button>
         <table id="departmentTable" class="table table-bordered table-hover">
             <thead>
