--- a/WebApp/WebApp/Views/_Layout.cshtml
+++ b/WebApp/WebApp/Views/_Layout.cshtml
@@ -25,7 +25,7 @@
         </div>
         <ul id="nav-links" class="nav-links">
             <li><a asp-action="" asp-controller="">Home</a></li>
-            <li><a asp-action="" asp-controller="">Employees</a></li>
+            <li><a asp-action="index" asp-controller="employee">Employees</a></li>
             <li><a asp-action="index" asp-controller="department">Departments</a></li>
         </ul>
 
