--- a/WebApp/WebApp/Views/Department/New.cshtml
+++ b/WebApp/WebApp/Views/Department/New.cshtml
@@ -12,7 +12,7 @@
         </button>
         <img src="https://cdn.pixabay.com/photo/2015/05/15/14/22/conference-room-768441_1280.jpg" alt="Avatar" style="width:100%; height:50vh;">
         <div class="d-container">
-            <form asp-action="save" asp-controller="department" method="post" style="padding:30px 0; width:40vh;">
+            <form asp-action="save" asp-controller="department" method="post" style="padding:30px 0;">
                 <div class="form-group">
                     <label asp-for="@Model.Name">Department name</label>
                     <input asp-for="@Model.Name" type="text" value="" class="form-control"/>
