--- a/WebApp/WebApp/Views/Shared/404.cshtml
+++ b/WebApp/WebApp/Views/Shared/404.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "404 Error";
     Layout = "~/Views/_Layout.cshtml";
 }
-<h1>404</h1>
+<h1 class="h1404">404</h1>
 <p>Oops! Something is wrong.</p>
 <div style="margin-left:auto;margin-right:auto; text-align:center;">
     <a class="btn" asp-action="index" asp-controller="home"><i class="icon-home"></i> Go back to home page</a>
