--- a/WebApp/WebApp/wwwroot/css/site.css
+++ b/WebApp/WebApp/wwwroot/css/site.css
@@ -29,32 +29,42 @@ nav {
     color: white;
     text-transform: uppercase;
     font-size: 20px;
-    z-index:1;
-
+    z-index: 1;
 }
 
-.nav-links {
+.nav-links{
     display: flex;
-    justify-content: space-around;
-    width: 40%;
+    justify-content: space-between;
     padding-top:10px;
+    width:30%;
+    margin-left:-350px;
+}
+.nav-links-2 {
+    display: flex;
+    justify-content: flex-end;
+    width: 15%;
+    padding-top: 10px;
 }
 
-    .nav-links li {
-        list-style: none;
-    }
+.nav-links li,.nav-links-2 li {
+    list-style: none;
+}
 
-    .nav-links a {
-        text-decoration: none;
-        color: white;
-        letter-spacing: 3px;
-        font-weight: bold;
-        font-size: 14px;
-    }
+ .nav-links a, .nav-links-2 a {
+   text-decoration: none;
+   color: white;
+   letter-spacing: 3px;
+   font-weight: bold;
+   font-size: 16px;
+}
+ .nav-links-2 a{
+     margin-left:30px;
+ }
 
-        .nav-links a:hover {
-            color: rgb(228, 228, 228);
-        }
+.nav-links a:hover,.nav-links-2 a:hover {
+   color: rgb(228, 228, 228);
+}
+
 
 .toggle-button {
     display: none;
@@ -127,12 +137,11 @@ a {
 
 
 p {
-    font-size: 2em;
+    font-size: 1.3em;
     text-align: center;
-    font-weight: 100;
 }
 
-h1 {
+.h1404 {
     text-align: center;
     font-size: 15em;
     font-weight: 100;
@@ -165,6 +174,9 @@ h1 {
         transform: translateY(-140%);
         transition: transform 0.5s ease-out;
         padding:0;
+    }
+    .nav-links-2{
+        position:absolute;
     }
     .toggle-button div {
         background-color: rgb(94, 118, 133);
