--- a/WebApp/WebApp/Views/Account/Register.cshtml
+++ b/WebApp/WebApp/Views/Account/Register.cshtml
@@ -14,6 +14,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="City">City</label>
+                <input asp-for="City" type="text" value="" class="form-control" />
+                <span asp-validation-for="City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Password">Password</label>
                 <input asp-for="Password" type="password" value="" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
