--- a/WebApp/WebApp/Views/_Layout.cshtml
+++ b/WebApp/WebApp/Views/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> signInManager;
+﻿
+@inject SignInManager<WebApp.Models.ApplicationUser> signInManager;
 
 <!DOCTYPE html>
 <html>
