--- a/WebApp/WebApp/Views/_Layout.cshtml
+++ b/WebApp/WebApp/Views/_Layout.cshtml
@@ -31,6 +31,8 @@
                 <li><a asp-action="" asp-controller="">Home</a></li>
                 <li><a asp-action="index" asp-controller="employee">Employees</a></li>
                 <li><a asp-action="index" asp-controller="department">Departments</a></li>
+                <li><a asp-action="index" asp-controller="administration">Roles</a></li>
+
             </ul>
             <ul class="nav-links-2">
 
