--- a/WebApp/WebApp/Views/Administration/CreateRole.cshtml
+++ b/WebApp/WebApp/Views/Administration/CreateRole.cshtml
@@ -14,6 +14,7 @@
                 <span asp-validation-for="RoleName" class="text-danger"></span>
             </div>
             <button class="btn" type="submit" style="width:200px;">submit</button>
+            <a class="btn" asp-action="index" asp-controller="administration"style="width:200px;">Cancel</a>
         </form>
     </div>
 
