--- a/WebApp/WebApp/Views/Administration/Index.cshtml
+++ b/WebApp/WebApp/Views/Administration/Index.cshtml
@@ -15,7 +15,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Role Name : @role.Name</h5>
-                        <a asp-action="" asp-controller="" class="btn ">Edit</a>
+                        <a asp-action="editrole" asp-controller="administration" asp-route-id="@role.Id" class="btn ">Edit</a>
                         <a asp-action="" asp-controller="" class="btn " style="background-color: red;">Delete</a>
                 </div>
              </div>
