Renamed administration/index action to administration/roles

--- a/WebApp/WebApp/Views/Administration/Roles.cshtml
+++ b/WebApp/WebApp/Views/Administration/Roles.cshtml
@@ -1,13 +1,14 @@
 ﻿@model IEnumerable<IdentityRole>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Roles";
     Layout = "~/Views/_Layout.cshtml";
 }
 
-@{ 
+
+@{
     <div class="wrapper">
         <a class="btn" style="margin-bottom:2%;" asp-action="createrole" asp-controller="administration">Create new role</a>
-        @foreach(var role in Model)
+        @foreach (var role in Model)
         {
             <div class="card" style="margin-bottom:2%;">
                 <div class="card-header">
@@ -15,11 +16,11 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Role Name : @role.Name</h5>
-                        <a asp-action="editrole" asp-controller="administration" asp-route-id="@role.Id" class="btn ">Edit</a>
-                        <a asp-action="" asp-controller="" class="btn " style="background-color: red;">Delete</a>
+                    <a asp-action="editrole" asp-controller="administration" asp-route-id="@role.Id" class="btn ">Edit</a>
+                    <a asp-action="" asp-controller="" class="btn " style="background-color: red;">Delete</a>
                 </div>
-             </div>
+            </div>
         }
     </div>
 }
-    
+
