--- a/WebApp/WebApp/wwwroot/css/site.css
+++ b/WebApp/WebApp/wwwroot/css/site.css
@@ -150,6 +150,41 @@ p {
     text-shadow: #26a69a 1px 1px, #0062cc 2px 2px, #0062cc 3px 3px, #26a69a 4px 4px, #0062cd 5px 5px, #26a69a 6px 6px, #26a69a 7px 7px, #26a69a 8px 8px, #26a69a 9px 9px;
 }
 
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    /* Links inside the dropdown */
+.dropdown-content a {
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+}
+
+        /* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+     background-color: #ddd;
+     color:black;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+     color: rgb(228, 228, 228);
+}
+
 /*Mobile part*/
 @media screen and (max-width:768px) {
     body {
