Implemented edit identity user

--- a/WebApp/WebApp/Views/_Layout.cshtml
+++ b/WebApp/WebApp/Views/_Layout.cshtml
@@ -66,9 +66,9 @@
                 </a>
             </div>
             <ul id="nav-links" class="nav-links">
+                <li><a asp-action="index" asp-controller="home">Home</a></li>
                 <li><a asp-action="index" asp-controller="employee">Employees</a></li>
                 <li><a asp-action="index" asp-controller="department">Departments</a></li>
-
             </ul>
             <ul class="nav-links-2">
 
