--- a/WebApp/WebApp/Views/Administration/EditRole.cshtml
+++ b/WebApp/WebApp/Views/Administration/EditRole.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group row">
                 <div class="col-sm-10">
                     <button type="submit" class="btn">Update</button>
-                    <a asp-action="index" asp-controller="administration" class="btn ">Cancel</a>
+                    <a asp-action="roles" asp-controller="administration" class="btn ">Cancel</a>
                 </div>
             </div>
 
