--- a/WebApp/WebApp/Views/Administration/Users.cshtml
+++ b/WebApp/WebApp/Views/Administration/Users.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">@user.Email</h5>
-                    <a asp-action="" asp-controller="" asp-route-id="@user.Id" class="btn ">Edit</a>
+                    <a asp-action="EditUser" asp-controller="Administration" asp-route-id="@user.Id" class="btn ">Edit</a>
                     <a asp-action="" asp-controller="" class="btn " style="background-color: red;">Delete</a>
                 </div>
             </div>
