--- a/WebApp/WebApp/Views/Administration/Users.cshtml
+++ b/WebApp/WebApp/Views/Administration/Users.cshtml
@@ -14,13 +14,23 @@
                 <div class="card-header">
                     User Id : @user.Id
                 </div>
+
                 <div class="card-body">
                     <h5 class="card-title">@user.Email</h5>
-                    <a asp-action="EditUser" asp-controller="Administration" asp-route-id="@user.Id" class="btn ">Edit</a>
-                    <a asp-action="" asp-controller="" class="btn " style="background-color: red;">Delete</a>
+
+                    <form asp-action="DeleteUser" asp-controller="Administration" asp-route-id="@user.Id" method="post">
+                        <a asp-action="EditUser" asp-controller="Administration" asp-route-id="@user.Id" class="btn ">Edit</a>
+                        <button  type="button" class="btn " style="background-color: red;" onclick="confirmDelete(this)">Delete</button>
+                    </form>
                 </div>
+
             </div>
-        }
-    </div>
-}
+            }
+        </div>
+    }
+
+   @section Scripts{
+       <script src="~/js/CustomScript.js"></script>
+
+    }
 
