Setted up Production includes

--- a/WebApp/WebApp/Views/_Layout.cshtml
+++ b/WebApp/WebApp/Views/_Layout.cshtml
@@ -11,6 +11,12 @@
         <script src="~/jquery-validation/jquery.validate.js"></script>
         <script src="~/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     </environment>
+    <environment exclude="Development">
+        <script src="~/jquery/jquery.min.js"></script>
+        <script src="~/jquery-validation/jquery.validate.min.js"></script>
+        <script src="~/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    </environment>
+
     <!--Datatables css-->
     <link href="~/datatables/css/jquery.dataTables.css" rel="stylesheet" />
     <!--Bootstrap css-->
