Implemented custom error page

--- a/WebApp/WebApp/Views/Shared/Error.cshtml
+++ b/WebApp/WebApp/Views/Shared/Error.cshtml
@@ -2,14 +2,25 @@
 @{
     ViewData["Title"] = "Error";
     Layout = "~/Views/_Layout.cshtml";
+    var ViewBagErrorTitle = ViewBag.ErrorTitle;
 }
 
+@if (ViewBagErrorTitle == null)
+{
     <div class="wrapper">
         <h3>
-            An occured while processing your request.
+            An error occured while processing your request.
             The support team is notified and we are working on the fix
         </h3>
         <h5>Please contact us on sampleemail@gmail.com</h5>
     </div>
-  
+}
+else
+{
+    <div class="wrapper">
+        <h1 class="text-danger">@ViewBag.ErrorTitle</h1>
+        <h6 class="text-danger">@ViewBag.ErrorMessage</h6>
+    </div>  
+}
+
 
