Implemented manage user claims

--- a/WebApp/WebApp/Views/Administration/EditUser.cshtml
+++ b/WebApp/WebApp/Views/Administration/EditUser.cshtml
@@ -89,7 +89,7 @@
             </div>
 
             <div class="card-footer">
-                <a asp-action="" asp-controller="" class="btn" style="color:white;">Manage Claims</a>
+                <a asp-action="ManageUserClaims" asp-controller="Administration" asp-route-userId="@Model.Id" class="btn" style="color:white;">Manage Claims</a>
             </div>
         </div>
 
