--- a/WebApp/WebApp/wwwroot/css/site.css
+++ b/WebApp/WebApp/wwwroot/css/site.css
@@ -113,6 +113,13 @@ nav {
     padding: 2px 16px;
     width:100%;
 }
+.login-container{
+    display:flex;
+}
+.login-formater {
+    padding: 30px 0;
+    margin: 0 10%;
+}
 
 .btn {
     font-size: 14px;
@@ -269,5 +276,9 @@ p {
     }
     form {
         width: 30vh;
+    }
+    .login-container {
+        display: flex;
+        flex-direction:column;
     }
 }
