Finished google external login

--- a/WebApp/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/WebApp/Views/Account/Login.cshtml
@@ -41,7 +41,7 @@
                 }
                 else
                 {
-                <form class="login-formater" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturlUrl">
+                <form class="login-formater" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
                     <div>
                         @foreach (var provider in Model.ExternalLogins)
                         {
